@@ -127,6 +127,7 @@
     * 0418 FIX: LDAP: Fixed broken role sync plugin with OpenLDAP...
     * 0419 FIX: LDAP: The default user profile roles are only assigned to users without roles...
     * 0249 FIX: Backup & Restore: fixed bug when uploading legacy snapshots...
+    * 0250 FIX: Fixed error on creating very large WATO snapshots...
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
